fix application z-index

--- a/fmarket/src/main/webapp/app/main.css
+++ b/fmarket/src/main/webapp/app/main.css
@@ -577,6 +577,7 @@
     padding-bottom: 98px;
     position: relative;
     min-height: 100vh;
+    z-index: 1;
 }
 
 .application-wrapper .footer-absolute-wrapper {
